# orfik

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  data.sqlite3  pyproject.toml  requirements.txt
orfik/: __main__.py  database.py  dynamic.py  questions.py  static.py
public/: index.html
questions/1/: answers.txt  statement.txt
questions/2/: statement.txt
questions/3/: statement.txt
questions/4/: answers.txt  statement.txt
questions/6/: statement.txt
questions/Q5/: statement.txt
templates/: answer.html  base.html  end.html  index.html  lb.html  login.html  question.html  sha512.js
tests/: test_orfik.py
