[tool.poetry]
name = "orfik"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
pre-commit = "^2.0.1"
isort = "^4.3.21"
Jinja2 = "^2.11.1"
bottle = "^0.12.18"
peewee = "^3.13.1"
gunicorn = "^20.0.4"
bottle-tools = "^2019.12.22"
htmlmin = "^0.1.12"
staticsite = "^2020.1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
